# tipe-2026

./: README.md
code/: dune-project  sari.opam
code/_build/: .db  .digest-db  log
code/_build/default/: sari.dune-package  sari.install  sari.opam  tipe.dune-package  tipe.install
code/_build/default/.dune/: configurator  configurator.v2
code/_build/default/lib/: grammar.ml  tipe.cma  tipe.cmxa  tipe.cmxs  tipe.ml-gen
code/_build/default/lib/.merlin-conf/: lib-tipe
code/_build/default/lib/.tipe.objs/: tipe__Grammar.impl.d  tipe__Grammar.intf.d  tipe__Token.intf.d
code/_build/default/lib/.tipe.objs/byte/: tipe.cmi  tipe.cmo  tipe.cmt  tipe__Grammar.cmi  (+7 more)
code/_build/default/lib/ftl/: file_to_list.cma  file_to_list.cmxa  file_to_list.cmxs  file_to_list.ml-gen
code/_build/default/lib/grammar/: grammar.cma  grammar.cmxa  grammar.cmxs
code/_build/default/lib/lexer/: lexer.cma  lexer.cmxa  lexer.cmxs  lexer.ml
code/_build/default/lib/parser/: parser.cma  parser.cmxa  parser.cmxs  parser.ml
code/_build/default/lib/token/: token.cma  token.cmxa  token.cmxs
code/_build/default/test/.merlin-conf/: exe-test_tipe
code/lexer/: lexer.ml  token.cmi
code/lib/: dune
code/lib/ftl/: dune
code/lib/grammar/: grammar.ml
code/lib/lexer/: dune  lexer.ml  lexer.mli
code/lib/parser/: dune  parser.ml
code/object-files-dir/: file.cmx  token.cmx
code/test/: dune
code/test-dir/: tests_file_tableau.ml
code/text-files/: output.ml  tests_file_tableau.ml
code/text-reading/: file.cmi  file.ml  file.mli
code/types/: token.cmi  token.ml  token.mli
(+76 files in other folders)
